AMD hevc_vaapi ffmpeg encoding = wrong image width (48px black bar on the right)
System information
System/GPU/CPU detail:
System: Host: hp Kernel: 5.10.23-1-MANJARO x86_64 bits: 64 compiler: gcc v: 10.2.0 Desktop: Xfce 4.16.0 tk: Gtk 3.24.24
wm: xfwm4 dm: LightDM Distro: Manjaro Linux base: Arch Linux
CPU: Info: 8-Core model: AMD Ryzen 7 PRO 4750GE with Radeon Graphics bits: 64 type: MT MCP arch: Zen 2 rev: 1 cache:
L2: 4 MiB
flags: avx avx2 lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm bogomips: 99043
Speed: 3497 MHz min/max: 1400/3100 MHz boost: enabled Core speeds (MHz): 1: 3497 2: 3302 3: 1840 4: 1841 5: 1841
6: 1840 7: 1841 8: 1844 9: 1720 10: 1785 11: 1778 12: 1784 13: 1811 14: 1809 15: 4136 16: 4136
Graphics: Device-1: Advanced Micro Devices [AMD/ATI] Renoir vendor: Hewlett-Packard driver: amdgpu v: kernel bus-ID: 0a:00.0
chip-ID: 1002:1636
Display: x11 server: X.Org 1.20.10 driver: loaded: amdgpu,ati unloaded: modesetting alternate: fbdev,vesa
resolution: 1920x1080~60Hz s-dpi: 96
OpenGL: renderer: AMD RENOIR (DRM 3.40.0 5.10.23-1-MANJARO LLVM 11.1.0) v: 4.6 Mesa 20.3.4 direct render: Yes
Describe the issue
Hello, hardware encoding using ffmpeg (n4.3.2) h264_vaapi works, but when converting some videos using hevc_vaapi , it adds an black bar to the encoded video right side, this time it is 48px wide. Here is the ffmpeg output for both encodings.
shows the yellow text:
[hevc_vaapi @ 0x55a63455e5c0] Driver does not support some wanted packed headers (wanted 0xd, found 0x1).
Similar message reported in #3524 (closed)
Thank You
this video NOT added black bar.